# violent

./: CMakeLists.txt  Makefile
Source/: FxChain.h  GeneratorChain.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  StandaloneApp.cpp  StreamChain.h  SynthEngine.h
Source/SoundProcessing/: Effects.h  Filter.h  MidiModifier.cpp  MidiModifier.h  Modulator.h  Sampler.cpp  Sampler.h  Synth.h
Source/Views/: FxBusView.cpp  FxBusView.h  Generators.cpp  Generators.h  MasterFilterView.cpp  MasterFilterView.h  MixerView.cpp  MixerView.h  RackView.cpp  RackView.h  SharedComponents.cpp  SharedComponents.h
Tests/: MidiModifierTests.cpp  PresetTests.cpp  TestMain.cpp  WaveformCaptureTests.cpp
